--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-draggable": "^3.2.1",
+    "react-native-cli": "^2.0.1",
     "react-player": "^1.11.0",
     "react-scripts": "2.1.8",
     "react-webcam": "^1.1.1"
