--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-webcam": "^1.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
